--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -36,13 +36,17 @@
   </thead>
   <tbody>
     <% todos.forEach(todo => { %>
+      <% const completedParams = todo.completed ? ['完了', 'DELETE', '完了取消'] : ['未完了', 'PUT', '完了'] %>
       <tr>
-        <th> <%= todos.indexOf(todo) + 1 + (pagenation.currentPage - 1) * itemPerPage  %> </td>
+        <th> <%= todos.indexOf(todo) + 1 + (pagenation.currentPage - 1) * itemPerPage  %> </th>
         <td> <%= todo.title %> </td>
         <td> <%= todo.deadline %> </td>
-        <td> <%= todo.completed ? "完了" : "未完了" %> </td>
-        <td> <%= todo.id %> </th>
-        <td> <button class="btn btn-outline-danger btn-sm" onclick="location.href='/todos/<%= todo.id %>?_method=DELETE'">削除</button> </th>
+        <td> <%= completedParams[0] %> </td>
+        <td> <%= todo.id %> </td>
+        <td> 
+          <button class="btn btn-outline-primary btn-sm" onclick="location.href='/todos/<%= todo.id %>/completed?_method=<%= completedParams[1] %>'"><%= completedParams[2] %></button> 
+          <button class="btn btn-outline-danger btn-sm" onclick="location.href='/todos/<%= todo.id %>?_method=DELETE'">削除</button> 
+        </td>
       </tr>
     <% }) %>
   </tbody>
