--- a/views/partials/top.ejs
+++ b/views/partials/top.ejs
@@ -6,15 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            ToDo一覧
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="/todos">ToDo一覧</a></li>
-            <li><a class="dropdown-item" href="/todos?completed=false">未完了一覧</a></li>
-            <li><a class="dropdown-item" href="/todos?completed=true">完了一覧</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="/todos">ToDo一覧</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/todos/new">ToDoの登録</a>
