--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -1,9 +1,3 @@
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">ToDo一覧</li>
-  </ol>
-</nav>
-
 <div class="text-center">
     <h2>ToDo一覧</h2>
 </div>
@@ -30,7 +24,7 @@
       <th scope="col">Title</th>
       <th scope="col">Deadline</th>
       <th scope="col">Completed</th>
-      <th scope="col">ID</th>
+      <th scope="col">Updated</th>
       <th scope="col">全<%= itemNum %>件</th>
     </tr>
   </thead>
@@ -42,7 +36,7 @@
         <td> <%= todo.title %> </td>
         <td> <%= todo.deadline %> </td>
         <td> <%= completedParams[0] %> </td>
-        <td> <%= todo.id %> </td>
+        <td> <%= todo.updatedAt.toString().slice(0,-17) %> </td>
         <td> 
           <button class="btn btn-outline-primary btn-sm" onclick="location.href='/todos/<%= todo.id %>/completed?_method=<%= completedParams[1] %>'"><%= completedParams[2] %></button> 
           <button class="btn btn-outline-danger btn-sm" onclick="location.href='/todos/<%= todo.id %>?_method=DELETE'">削除</button> 
